// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`E2E - react > Monorepo project > Installs react package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "react - 20201111162698-init"...
Migration "react - 20201111162698-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "react - 20240412185501-eslint-config"...
Migration "react - 20240412185501-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Applying migration "core - 20250623095600-remove-prettier-oxc"...
Migration "core - 20250623095600-remove-prettier-oxc" applied!
Applying migration "core - 20260311120000-migrate-to-biome"...
Migration "core - 20260311120000-migrate-to-biome" applied!
Applying migration "core - 20260604100000-migrate-to-vitest"...
Migration "core - 20260604100000-migrate-to-vitest" applied!
Applying migration "react - 20260604100001-migrate-to-vitest"...
Migration "react - 20260604100001-migrate-to-vitest" applied!
Symlinking dev dependencies...
- Symlinking @testing-library/dom
- Symlinking @testing-library/jest-dom
- Symlinking @testing-library/react
- Symlinking @ts-dev-tools/core
- Symlinking jsdom
- Symlinking react-test-renderer
- Symlinking @biomejs/biome
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @vitest/coverage-v8
- Symlinking vitest
Symlinking dev dependencies done!
Resolving peer dependencies...
Resolving peer dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - typescript

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react > Simple project > Installs react package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "react - 20201111162698-init"...
Migration "react - 20201111162698-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "react - 20240412185501-eslint-config"...
Migration "react - 20240412185501-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Applying migration "core - 20250623095600-remove-prettier-oxc"...
Migration "core - 20250623095600-remove-prettier-oxc" applied!
Applying migration "core - 20260311120000-migrate-to-biome"...
Migration "core - 20260311120000-migrate-to-biome" applied!
Applying migration "core - 20260604100000-migrate-to-vitest"...
Migration "core - 20260604100000-migrate-to-vitest" applied!
Applying migration "react - 20260604100001-migrate-to-vitest"...
Migration "react - 20260604100001-migrate-to-vitest" applied!
Symlinking dev dependencies...
- Symlinking @testing-library/dom
- Symlinking @testing-library/jest-dom
- Symlinking @testing-library/react
- Symlinking @ts-dev-tools/core
- Symlinking jsdom
- Symlinking react-test-renderer
- Symlinking @biomejs/biome
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @vitest/coverage-v8
- Symlinking vitest
Symlinking dev dependencies done!
Resolving peer dependencies...
Resolving peer dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - @types/node
  - typescript

Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/react":
  - @types/react
  - @types/react-dom

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react > Simple project > Installs react package 2`] = `
{
  "build": "tsc --noEmit",
  "check": "biome check --error-on-warnings --write .",
  "dev": "vite",
  "format": "biome format --write .",
  "lint": "biome lint --error-on-warnings .",
  "prepare": "ts-dev-tools install",
  "preview": "vite preview",
  "test": "vitest run",
  "test:ci": "npm run test:cov",
  "test:cov": "vitest run --coverage",
  "test:watch": "vitest",
  "vitest": "vitest",
}
`;

exports[`E2E - react > Simple project > Installs react package 3`] = `
"import { defineConfig } from "vitest/config";

export default defineConfig({
  test: {
    coverage: {
      include: ["src/**/*.{ts,tsx,js,jsx}"],
      provider: "v8",
    },
    environment: "jsdom",
    globals: true,
    setupFiles: ["./vitest.setup.ts"],
  },
});
"
`;

exports[`E2E - react > Simple project > Installs react package 4`] = `
"import "@testing-library/jest-dom/vitest";
"
`;

exports[`E2E - react > Simple project > Installs react package 5`] = `
"{
  "$schema": "https://biomejs.dev/schemas/__VERSION__/schema.json",
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  },
  "files": {
    "ignoreUnknown": false
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "tab"
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  },
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "organizeImports": "on"
      }
    }
  }
}
"
`;
